--- a/APM/APM.CoreWeb/appsettings.json
+++ b/APM/APM.CoreWeb/appsettings.json
@@ -5,8 +5,12 @@
     }
   },
   "Exceptionless": {
-    "ApiKey": "zY1bmU2JbiIRbKet5n9mzFytF94iwONvJW2p3uEi",
-    "ServerUrl": "http://192.168.88.72:5000"
+    "ApiKey": "Ki6ELlleH9wq6k4iusVCb76Cpq0I73QPYdzcGlBm",
+    "ServerUrl": "http://192.168.88.100:5000"
+  },
+  "ExceptionlessOnline": {
+    "ApiKey": "KTJBOb1y6RyOk3CyH729IcO4KDhSUfLlEpARzWGJ",
+    "ServerUrl": "http://148.70.221.209:5000"
   },
   "AllowedHosts": "*"
 }
