--- a/Dockerfile/rabbitmq/docker-compose.yml
+++ b/Dockerfile/rabbitmq/docker-compose.yml
@@ -11,12 +11,12 @@ services:
       - RABBITMQ_DEFAULT_PASS:admin
     #ports setting
     ports:
-      - 15673:15672
-      - 5673:5672
+      - 15672:15672
+      - 5672:5672
     restart: always
     #volumes setting
     volumes:
-      - rabbitmqdata:/var/lib/rabbitmq 
+      - rabbitmqdata:/var/lib/rabbitmq/data 
     logging:
       driver: "json-file"
       options:
