--- a/Dockerfile/exceptionless/docker-compose.yml
+++ b/Dockerfile/exceptionless/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     restart: on-failure
     environment:
       EX_AppMode: Production
-      EX_BaseURL: http://192.168.88.100:5100 #URL to UI
+      EX_BaseURL: http://localhost:5101 #URL to UI
       EX_ConnectionStrings__Cache: provider=redis
       EX_ConnectionStrings__Elasticsearch: server=http://elasticsearch:9200
       #EX_ConnectionStrings__Email: smtps://user:password@smtp.host.com:587
@@ -25,7 +25,7 @@ services:
     networks:
       - infrasture_redis
     ports:
-      - 5000:80 # This can be commented out if using reverse proxy.
+      - 5100:80 # This can be commented out if using reverse proxy.
     volumes:
       - appdata:/app/storage
 
@@ -39,7 +39,7 @@ services:
     restart: on-failure
     environment:
       EX_AppMode: Production
-      EX_BaseURL: http://192.168.88.100:5100
+      EX_BaseURL: http://localhost:5101
       EX_ConnectionStrings__Cache: provider=redis
       EX_ConnectionStrings__Elasticsearch: server=http://elasticsearch:9200
       #EX_ConnectionStrings__Email: smtps://user:password@smtp.host.com:587
@@ -57,12 +57,12 @@ services:
     image: exceptionless/ui:latest
     environment:
       AppMode: Development
-      EX_ApiUrl: http://192.168.88.100:5000
+      EX_ApiUrl: http://localhost:5100
       #EX_Html5Mode: 'false'
       #EX_EnableSsl: 'false'
       #EX_EnableAccountCreation: 'false'
     ports:
-      - 5100:80 # This can be commented out if using reverse proxy.
+      - 5101:80 # This can be commented out if using reverse proxy.
 
 #  reverseproxy:
 #    depends_on:
