--- a/Dockerfile/mysql/docker-compose.yml
+++ b/Dockerfile/mysql/docker-compose.yml
@@ -6,13 +6,13 @@ services:
     container_name: mysql
     restart: always
     ports: 
-      - 3306:3306
+      - 33060:3306
     environment: 
       MYSQL_ROOT_PASSWORD: 123456
     networks:
       - mysql
     volumes: 
-      - mysql:/var/lib/mysql
+      - mysql:/var/lib/mysql/data
 
 networks:
   mysql:
