ef core 级联模型验证

--- a/EFCore/ContosoUniversity/appsettings.Development.json
+++ b/EFCore/ContosoUniversity/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    // "DefaultConnection": "Data Source=localhost,14333;Persist Security Info=True;User ID=sa;Password=Lwz3.131492653"
-    "DefaultConnection": "server=localhost;user id=root;password=123456;database=School;port=3306;CharSet=utf8;"
+    "DefaultConnection": "Data Source=localhost;DataBase=School;Persist Security Info=True;User ID=sa;Password=Lwz3.131492653"
+    // "DefaultConnection": "server=localhost;user id=root;password=123456;database=School;port=3306;CharSet=utf8;"
   },
   "Logging": {
     "LogLevel": {
