--- a/Dockerfile/mssql/docker-compose.yml
+++ b/Dockerfile/mssql/docker-compose.yml
@@ -2,14 +2,14 @@ version: '3.4'
 
 services:
   mssql:
-    image: microsoft/mssql-server-linux:2017-latest
+    image: mcr.microsoft.com/mssql/server:2022-latest
     ports:
       - 14333:1433
     container_name: mssql
     restart: on-failure
     environment:
       - ACCEPT_EULA=Y
-      - SA_PASSWORD=Lwz3.131492653 
+      - MSSQL_SA_PASSWORD=Lwz3.131492653 
     networks:
       - mssql
     volumes:
